[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/lobby_list/Lobby_List.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/styles/button_red.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/styles/background2.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/styles/button_green.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/fonts/ComicNeue-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/lobby_list/Lobby_Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/styles/button_green_disabled.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/fonts/playerlist_font.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=2]
size = 172
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "Intro_Transition"
tracks/0/type = "bezier"
tracks/0/path = NodePath("IntroPanel:custom_styles/panel:bg_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0, 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("IntroPanel:custom_styles/panel:bg_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.152941, -0.25, 0, 0.25, 0, 0.152941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("IntroPanel:custom_styles/panel:bg_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.105882, -0.25, 0, 0.25, 0, 0.105882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("IntroPanel:custom_styles/panel:bg_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0, 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.152941, -0.25, 0, 0.25, 0, 0.152941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.105882, -0.25, 0, 0.25, 0, 0.105882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("IntroPanel/IntroText:custom_fonts/font")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Outro_Transition"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("OutroPanel:custom_styles/panel:bg_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.486275, -0.25, 0, 0.25, 0, 0.486275, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("OutroPanel:custom_styles/panel:bg_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0, 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("OutroPanel:custom_styles/panel:bg_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.305882, -0.25, 0, 0.25, 0, 0.305882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("OutroPanel:custom_styles/panel:bg_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("IntroPanel:custom_styles/panel:bg_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("IntroPanel:custom_styles/panel:bg_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.152941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("IntroPanel:custom_styles/panel:bg_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.105882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("IntroPanel:custom_styles/panel:bg_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.152941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.105882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("IntroPanel/IntroText:custom_colors/font_color:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("IntroPanel/IntroText:custom_fonts/font")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 2 ) ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("OutroPanel:custom_styles/panel:bg_color:r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0.486275, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("OutroPanel:custom_styles/panel:bg_color:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0.752941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("OutroPanel:custom_styles/panel:bg_color:b")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0.305882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("OutroPanel:custom_styles/panel:bg_color:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.752941, 0.152941, 0.105882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.486275, 0.752941, 0.305882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="LobbyList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
lobbyButtonScene = ExtResource( 7 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )

[node name="Lobbies" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 307.0
margin_right = -40.0
margin_bottom = -150.0
custom_constants/separation = 20

[node name="TopCover" type="Panel" parent="Background"]
anchor_right = 1.0
margin_bottom = 231.0
custom_styles/panel = ExtResource( 4 )

[node name="BottomCover" type="Panel" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -124.0
custom_styles/panel = ExtResource( 4 )

[node name="BackForText" type="Button" parent="Background"]
visible = false
modulate = Color( 1, 1, 1, 0.658824 )
anchor_left = -0.301
anchor_top = -3.753
anchor_right = 1.397
anchor_bottom = 8.137
margin_left = -68.205
margin_top = 2512.06
margin_right = 42.885
margin_bottom = 2571.09

[node name="TopButtons" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 30.0
margin_right = 148.0
margin_bottom = 282.0
custom_constants/separation = 30

[node name="CreateLobby" type="Button" parent="Background/TopButtons"]
margin_right = 295.0
margin_bottom = 66.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Create Lobby"

[node name="JoinbyID" type="Button" parent="Background/TopButtons"]
margin_top = 96.0
margin_right = 295.0
margin_bottom = 162.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Join by ID"

[node name="LineEdit" type="LineEdit" parent="Background/TopButtons/JoinbyID"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = 100.0
custom_colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
align = 1
max_length = 6
expand_to_text_length = true
placeholder_text = "Enter Code Here"
caret_blink = true

[node name="Refresh" type="Button" parent="Background/TopButtons"]
margin_top = 192.0
margin_right = 295.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Refresh"

[node name="ToMainMenu" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -147.5
margin_top = -105.0
margin_right = 147.5
margin_bottom = -30.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Main Menu"

[node name="VSlider" type="VSlider" parent="Background"]
margin_left = 20.0
margin_top = 307.0
margin_right = 36.0
margin_bottom = 703.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
value = 100.0
tick_count = 100
ticks_on_borders = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Intro_Transition = SubResource( 3 )
anims/Outro_Transition = SubResource( 6 )
anims/RESET = SubResource( 4 )

[node name="IntroPanel" type="Panel" parent="."]
visible = false
margin_left = -563.0
margin_top = -481.0
margin_right = 1083.0
margin_bottom = 1454.0
custom_styles/panel = SubResource( 1 )

[node name="IntroText" type="Label" parent="IntroPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.5
margin_top = -199.5
margin_right = 299.5
margin_bottom = 199.5
custom_colors/font_color = Color( 0.752941, 0.152941, 0.105882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Lobby 
List"
align = 1
valign = 1

[node name="OutroPanel" type="Panel" parent="."]
visible = false
margin_left = -560.0
margin_top = -510.0
margin_right = 1076.0
margin_bottom = 1476.0
custom_styles/panel = SubResource( 5 )

[connection signal="pressed" from="Background/BackForText" to="." method="_on_BackForText_pressed"]
[connection signal="pressed" from="Background/TopButtons/CreateLobby" to="." method="_on_CreateLobby_pressed"]
[connection signal="pressed" from="Background/TopButtons/JoinbyID" to="." method="_on_JoinbyID_pressed"]
[connection signal="text_changed" from="Background/TopButtons/JoinbyID/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Background/TopButtons/JoinbyID/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Background/TopButtons/Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="Background/ToMainMenu" to="." method="_on_To_Main_Menu_pressed"]
[connection signal="value_changed" from="Background/VSlider" to="." method="_on_VSlider_value_changed"]
